--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: le site de Nuit Debout Epinal
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: fr
-url: https://clairezed.github.io/nuit-debout-epinal
-baseurl: /nuit-debout-epinal
+# url: https://clairezed.github.io/nuit-debout-epinal
+# baseurl: /nuit-debout-epinal
 
 # Jekyll configuration
 
