first major update

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
   excerpt: Liste des commissions existantes. N'hésitez pas à les contacter ou en proposer d'autres !
   image:
 
-- title: Infos et contact
-  url: /contact/
-  excerpt: "Nuit Debout Epinal ailleurs sur le web, et comment prendre contact"
-  image:
+# - title: Infos et contact
+#   url: /contact/
+#   excerpt: "Nuit Debout Epinal ailleurs sur le web, et comment prendre contact"
+#   image:
