hide unfinished stuff - adding media page

--- a/_data/commissions.yml
+++ b/_data/commissions.yml
@@ -21,7 +21,7 @@
   members: ["Brieuc M.", "Cécilia H.", "Géroux"]
 
 
-- title: Théatre
+- title: Théâtre
   coordination_link: https://framapad.org/
   members: ["Adrien", "Emma", "Bérénice", "Léandre"]
 
