--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,11 @@
   excerpt: Liste des commissions existantes. N'hésitez pas à les contacter ou en proposer d'autres !
   image:
 
+- title: Médias
+  url: /media/
+  excerpt: "Photos, vidéos..."
+  image:
+
 # - title: Infos et contact
 #   url: /contact/
 #   excerpt: "Nuit Debout Epinal ailleurs sur le web, et comment prendre contact"
