--- a/_data/nde-links.yml
+++ b/_data/nde-links.yml
@@ -15,5 +15,5 @@
 - title: Tumblr
   url: http://nuitsdeboutphoto.tumblr.com
 
-- title: Mail contact
-  url: nuitdebout.epinal@openmailbox.org
+# - title: Mail contact
+#   url: nuitdebout.epinal@openmailbox.org
