ajout de commission

--- a/_data/commissions.yml
+++ b/_data/commissions.yml
@@ -1,6 +1,10 @@
 - title: Logistique
   coordination_link: https://framapad.org/
-  members: ["Renée Lise Bernard", "Isabelle G.", "Juliette"]
+  members: ["Renée Lise & Bernard", "Isabelle G.", "Juliette", "Emmanuelle L.", "Léo P.", "Pascal M.", "Mathieu"]
+
+- title: Environnement
+  coordination_link: https://framapad.org/
+  members: ["Bernard S", "Renée Lise", "Isabelle G.", "Emmanuelle L.", "Léandre B.", "Hélène B.", "Dominique H.", "Juliette", "Adrien", "Emma L.", "Bérénice", "Flora G."]
 
 - title: Documentation
   coordination_link: https://framapad.org/
@@ -9,26 +13,44 @@
 
 - title: Médias
   coordination_link: https://framapad.org/
-  members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Annabelle"]
+  members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Annabelle", "Julien D.", "Anabelle", "Adrien"]
 
 - title: Jardin
   coordination_link: https://framapad.org/
-  members: ["Emmanuelle L.", "Stéphane", "Adrien", "Juliette", "Alice M."]
+  members: ["Emmanuelle L.", "Stéphane", "Adrien", "Juliette", "Alice M.", "Jehanic", "Céline"]
 
+- title: Cuisine
+  coordination_link: https://framapad.org/
+  members: ["Emmanuelle L.", "Cécilia H."]
 
 - title: Projection
   coordination_link: https://framapad.org/
-  members: ["Brieuc M.", "Cécilia H.", "Géroux"]
-
+  members: ["Brieuc M.", "Cécilia H.", "Géroux", "Isabelle G."]
 
 - title: Théâtre
   coordination_link: https://framapad.org/
-  members: ["Adrien", "Emma", "Bérénice", "Léandre"]
+  members: ["Adrien", "Emma", "Bérénice"]
+
+- title: Théâtre radical
+  coordination_link: https://framapad.org/
+  members: ["Joël", "Léandre", "Antoine", "Brieuc"]
 
 - title: Antipub
   coordination_link: https://framapad.org/
-  members: ["Stéphane", "Claire Z.", "Emmanuelle L."]
+  members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Cécilia H", "Elodie", "Brieuc M"]
 
 - title: Musique
   coordination_link: https://framapad.org/
-  members: ["mp"]
+  members: ["MP", "Joël", "Mathieu"]
+
+- title: Projet de société
+  coordination_link: https://framapad.org/
+  members: ["l'autre Léo P", "Stéphane", "Cécilia"]
+
+- title: Langue de bois
+  coordination_link: https://framapad.org/
+  members: ["Antoine D.", "Léandre", "Agathe"]
+
+- title: Convergence des luttes
+  coordination_link: https://framapad.org/
+  members: ["Réseau Rêve", "Dominique H", "Stéphane", "l'autre Léo P"]
