--- a/_data/commissions.yml
+++ b/_data/commissions.yml
@@ -13,7 +13,7 @@
 
 - title: Médias
   coordination_link: https://framapad.org/
-  members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Annabelle", "Julien D.", "Anabelle", "Adrien"]
+  members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Julien D.", "Anabelle"]
 
 - title: Jardin
   coordination_link: https://framapad.org/
