--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: Nuit Debout Epinal
 description: le site de Nuit Debout Epinal
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
+logo: logoEpinal.jpg# 120x120 px default image used for Twitter summary card
+teaser: teaser.jpg # 400x250 px default teaser image used in image archive grid
 locale: fr
 url: https://clairezed.github.io/nuit-debout-epinal
 
@@ -13,7 +13,7 @@ url: https://clairezed.github.io/nuit-debout-epinal
 sass:
   sass_dir: _sass
   style: compressed
-permalink: /:categories/:title/
+# permalink: /:categories/:title/
 kramdown:
   toc_levels: 1..2
 highlighter: rouge
@@ -29,26 +29,21 @@ post_ext: md
 page_ext: md
 
 # Found in _templates/
-post_layout: article
-page_layout: article
+# post_layout: article
+# page_layout: article
 
 # Format titles with titlecase?
 titlecase: true
 
 
-# Site owner
-owner:
-  name:
-  email:
-  twitter:
-  google:
-    ad-client:
-    ad-slot:
-  bio:
-  avatar: bio-photo.jpg # 160x160 px image for author byline
-  disqus-shortname:
-
 include:
   - _pages
 
 exclude: ["lib", "config.rb", ".sass-cache", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "*.sublime-project", "*.sublime-workspace", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "node_modules", "Gruntfile.js", "package.json"]
+
+
+collections:
+  commissions:
+    output: true
+    permalink: /:collection/:path/
+    title: Commissions
