--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: le site de Nuit Debout Epinal
 logo: logoEpinal.jpg# 120x120 px default image used for Twitter summary card
 teaser: teaser.jpg # 400x250 px default teaser image used in image archive grid
 locale: fr
-url: https://clairezed.github.io/nuit-debout-epinal
+url: http://www.nuitdeboutepinal.fr/
 
 
 # Jekyll configuration
