#3 adding one press link

--- a/_data/revue-presse.yml
+++ b/_data/revue-presse.yml
@@ -17,6 +17,11 @@
   media: Magnum la radio
   date: 2016-04-22 15:35:44 +0200
 
+- title: "La première « Nuit debout » en images"
+  url: http://epinalinfos.fr/2016/04/premiere-nuit-debout-images/
+  media: EpinalInfos
+  date: 2016-04-22 15:35:44 +0200
+
 
 - title: "La Nuit Debout prend ses quartiers à Épinal"
   url: http://www.centpourcent-vosges.fr/culture/musique/la-nuit-debout-prend-ses-quartiers-a-epinal-a4114.html
