micro correction lien

--- a/_data/commissions.yml
+++ b/_data/commissions.yml
@@ -73,7 +73,7 @@
 
 - title: Logistique
   symbol: logistique
-  coordination_link: https://chat.nuitdebout.fr/channel/epinal-logistique
+  coordination_link: https://chat.nuitdebout.fr/channel/epinal
   members: ["Renée Lise & Bernard", "Isabelle G.", "Juliette", "Emmanuelle L.", "Léo P.", "Pascal M.", "Mathieu"]
   description: "La commission logistique se charge de l'organisation au quotidien de l'occupation de la place : récupération et transport du matériel, stockage et installation..."
   image:
