--- a/_data/nde-links.yml
+++ b/_data/nde-links.yml
@@ -15,5 +15,10 @@
 - title: Tumblr
   url: http://nuitsdeboutphoto.tumblr.com
 
+
+# - title: Liste de diffusion
+#   url: https://lists.riseup.net/www/subscribe/nuitdebout-epinal
+  # description:
+
 # - title: Mail contact
 #   url: nuitdebout.epinal@openmailbox.org
