maj revue de presse et agenda

--- a/_data/revue-presse.yml
+++ b/_data/revue-presse.yml
@@ -1,5 +1,31 @@
 # Liens vers les articles qui parlent de nuit debout epinal
 
+- title: "Nuit debout d'Epinal : cours camarade, le vieux monde est devant toi !"
+  url: http://odeurdusapin.blogspot.fr/2016/04/nuit-debout-epinal.html
+  media: L'Odeur du Sapin
+  date: 2016-04-29 15:35:44 +0200
+
+- title: "Nuit Debout reprend ce soir à 18h place des Vosges"
+  url: http://www.actu88.fr/asides/nuit-debout-reprend-ce-soir-a-18h-place-des-vosges-a-epinal/
+  media: Actu88
+  date: 2016-04-28 15:35:44 +0200
+
+
+- title: Epinal passe son week-end debout
+  url: http://epinalinfos.fr/2016/04/epinal-passe-week-end-debout/
+  media: EpinalInfos
+  date: 2016-04-25 15:35:44 +0200
+
+- title: "Nuit Debout, prochain rendez-vous à partir de 18h"
+  url: http://www.actu88.fr/nuit-debout-toujours-rendez-vous-entre-14h-et-1h/
+  media: Actu88
+  date: 2016-04-24 15:35:44 +0200
+
+- title: Nuit Debout à Epinal
+  url: http://epinalnews.over-blog.com/2016/04/nuit-debout-a-epinal.html
+  media: Blog Epinal News
+  date: 2016-04-24 15:35:44 +0200
+
 - title: Nuit Debout se poursuit ce soir !
   url: http://www.actu88.fr/nuit-debout-se-poursuit-demain-soir/
   media: Actu88
