--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -50,7 +50,14 @@
 - date_nd: Dimanche 62 mars
   date_normal: 1er mai
   date: 2016-05-01 23:59:59 +0200
-  hour: 16h - 01h
+  hour: 18h - 00h
   location: Place des Vosges
   wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal#Dimanche_62_mars.2F1er_mai_2016"
+
+- date_nd: Vendredi 67 mars
+  date_normal: 6 mai
+  date: 2016-05-06 23:59:59 +0200
+  hour: 18h - 00h
+  location: Place des Vosges
+  wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal#Vendredi_67_mars_.2F_6_mai_2016"
 
