--- a/_data/nde-links.yml
+++ b/_data/nde-links.yml
@@ -15,9 +15,8 @@
 - title: Tumblr
   url: http://nuitsdeboutphoto.tumblr.com
 
-
-# - title: Liste de diffusion
-#   url: https://lists.riseup.net/www/subscribe/nuitdebout-epinal
+- title: Newsletter
+  url: https://lists.riseup.net/www/subscribe/nuitdebout-epinal
   # description:
 
 # - title: Mail contact
