--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -68,3 +68,10 @@
   location: Place des Vosges
   wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal/74mars"
 
+- date_nd: Vendredi 81 mars
+  date_normal: 20 mai
+  date: 2016-05-20 23:59:59 +0200
+  hour: 18h - 01h
+  location: Place des Vosges
+  wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal/81mars"
+
