--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -75,3 +75,10 @@
   location: Place des Vosges
   wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal/81mars"
 
+- date_nd: Vendredi 88 mars
+  date_normal: 27 mai
+  date: 2016-05-27 23:59:59 +0200
+  hour: 18h - 01h
+  location: Place des Vosges
+  wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/%C3%89pinal/88mars"
+
