--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -88,6 +88,6 @@
   date: 2016-06-03 23:59:59 +0200
   hour: 18h
   theme: Démocratie
-  location: Place des Vosges
+  location: Place de la Chipotte
   wiki_link: "https://wiki.nuitdebout.fr/wiki/Villes/Épinal/95mars"
 
