--- a/_data/nde-links.yml
+++ b/_data/nde-links.yml
@@ -16,8 +16,8 @@
   url: http://nuitsdeboutphoto.tumblr.com
 
 - title: Newsletter
-  url: https://lists.riseup.net/www/subscribe/nuitdebout-epinal
+  url: https://lists.riseup.net/www/subscribe/nuitdeboutepinal
   # description:
 
-# - title: Mail contact
-#   url: nuitdebout.epinal@openmailbox.org
+- title: Liste de discussion
+  url: https://lists.riseup.net/www/subscribe/nuitdeboutepinal-discussion
