--- a/_data/revue-presse.yml
+++ b/_data/revue-presse.yml
@@ -1,5 +1,11 @@
 # Liens vers les articles qui parlent de nuit debout epinal
 
+- title: "Vosges : une Nuit debout programmée à Epinal s'attaque au nucléaire"
+  url: http://www.vosgesmatin.fr/edition-d-epinal/2016/05/22/vosges-une-nuit-debout-programmee-a-epinal-s-attaque-au-nucleaire
+  media: Vosges Matin
+  date: 2016-05-22 15:35:44 +0200
+
+
 - title: "Nuit debout d'Epinal : cours camarade, le vieux monde est devant toi !"
   url: http://odeurdusapin.blogspot.fr/2016/04/nuit-debout-epinal.html
   media: L'Odeur du Sapin
