--- a/_data/commissions.yml
+++ b/_data/commissions.yml
@@ -1,7 +1,7 @@
 - title: Animation
   symbol: animation
   coordination_link: https://chat.nuitdebout.fr/channel/epinal-animation
-  short_description: "Organisation des ateliers"
+  short_description: "Organisation d'ateliers et d'événements"
   description: "Vous avez un atelier à proposer ? C'est à la commission animation qu'il faut vous adresser !"
   image:
     teaser: comanimation1.jpg
@@ -11,28 +11,28 @@
   symbol: action
   coordination_link: https://chat.nuitdebout.fr/channel/epinal-action
   short_description: "Organisation des actions Nuit Debout Epinal"
-  description: "Coordination et impulsion des actions émergeant de Nuit Debout Epinal"
+  description: "Coordination et impulsion des actions émergeant de Nuit Debout Epinal. Appel à rassemblement et convergence sur certains évènements."
   image:
-    # teaser: comanimation1.jpg
-    # features: [comanimation1.jpg, comanimation2.jpg]
+    teaser: comaction1.jpg
+    features: [comaction1.jpg]
 
 - title: Antipub
   symbol: antipub
   coordination_link: https://chat.nuitdebout.fr/channel/epinal-antipub
   members: ["Stéphane", "Claire Z.", "Emmanuelle L.", "Cécilia H", "Elodie", "Brieuc M"]
   short_description: "Discuter et agir contre la publicité"
-  description: "Réflexions et actions autour de l'opposition à l'omniprésence de la publicité."
+  description: "Réflexion autour de la publicité et de sa présence dans notre environnement. L'équipe travaillant actuellement constate (et conteste !) son omniprésence et s'engage donc dans des actions d'information publique et de protestation."
   image:
-    # teaser: comanimation1.jpg
-    # features: [comlogistique1.jpg, comlogistique2.jpg]
+    teaser: comantipub1.jpg
+    features: [comantipub1po.jpg, comantipub2.jpg]
 
-- title: Convergence des luttes
-  symbol: convergencedesluttes
-  coordination_link: https://chat.nuitdebout.fr/channel/epinal-convergencedesluttes
-  members: ["Réseau Rêve", "Dominique H", "Stéphane", "l'autre Léo P"]
-  short_description: "Liaison avec les luttes existantes"
-  description: "Synchronisation des actions au sein de la nuit debout et en lien avec le tissu associatif existant"
-  image:
+# - title: Convergence des luttes
+#   symbol: convergencedesluttes
+#   coordination_link: https://chat.nuitdebout.fr/channel/epinal-convergencedesluttes
+#   members: ["Réseau Rêve", "Dominique H", "Stéphane", "l'autre Léo P"]
+#   short_description: "Liaison avec les luttes existantes"
+#   description: "Synchronisation des actions au sein de la nuit debout et en lien avec le tissu associatif existant"
+#   image:
     # teaser: comanimation1.jpg
     # features: [comlogistique1.jpg, comlogistique2.jpg]
 
@@ -52,10 +52,11 @@
   coordination_link: https://chat.nuitdebout.fr/channel/epinal-documentation
   members: ["Isabelle", "Cécilia H.", "Julien H."]
   short_description: "Gestion des ressources documentaires"
-  description: "La commission documentation se charge de l'apport de ressources documentaires au sein de Nuit Debout Epinal (et notamment de Biblio Bonjour, mise à disposition de livres sur place)"
+  description: "La commission documentation se charge de l'apport de ressources documentaires au sein de Nuit Debout Epinal."
   image:
     teaser: comdocumentation.jpg
     features: [comdocumentation.jpg]
+
 
 - title: Entrepreneuriat social
   symbol: entrepreneuriatsocial
@@ -82,20 +83,12 @@
   coordination_link: https://chat.nuitdebout.fr/channel/epinal-jardin
   members: ["Emmanuelle L.", "Stéphane", "Adrien", "Juliette", "Alice M.", "Jehanic", "Céline"]
   short_description: "Réappropriation de la végétation en ville"
-  description: "La commission jardin propose des actions autour de la réappropriation de la végétation; Parmi les ateliers mis en place : dons et échanges de plants, bombes de graine..."
+  description: " La commission jardin propose des actions autour de la réappropriation de la végétation."
   image:
     teaser: comjardin2.jpg
     features: [comjardin2.jpg, comjardin3.jpg]
 
-- title: Langue de bois
-  symbol: languedebois
-  coordination_link: https://chat.nuitdebout.fr/channel/epinal-languedebois
-  members: ["Antoine D.", "Léandre", "Agathe"]
-  short_description: "Manipulation et détournement de la langue de bois"
-  description: "La langue de bois est un principe fondamental de ce qui gouverne le système même de notre langage. Constamment utilisée lors de discours officiels importants, meetings politiques, colloques divers, elle permet de mettre en place un dialecte rhétorique donnant l’impression de dire des choses alors que rien ne se dit concrètement. Son fonctionnement est simple, consistant en l’emploi de quelques mots-clés abstraits se présentant comme termes à sens profond. Pour exemples : Diagnostic partagé, Propriété, Partenariat, Démocratie, Habitants, Développement, Projet, Proximité, Acteurs, Local, Contrat, Biens communs, Interculturel, Lien social, mondialisation… Placez quelques uns de ces mots dans une phrase, ou mieux, construisez des phrases principalement avec ces mots, et vous rejoindrez l’emblème de ce fabuleux jargon institutionnel que l’on nomme la langue de bois."
-  image:
-    # teaser: comanimation1.jpg
-    # features: [comlogistique1.jpg, comlogistique2.jpg]
+
 
 - title: Logistique
   symbol: logistique
@@ -107,15 +100,15 @@
     teaser: comlogistique1.jpg
     features: [comlogistique1.jpg, comlogistique2.jpg]
 
-- title: Musique
-  symbol: musique
-  coordination_link: https://chat.nuitdebout.fr/channel/epinal-musique
-  members: ["MP", "Joël", "Mathieu"]
-  short_description: "Gestion et organisation de concerts et d'animations musicales"
-  description: "Gestion et organisation de concerts et d'animations musicales"
-  image:
-    # teaser: comanimation1.jpg
-    # features: [comlogistique1.jpg, comlogistique2.jpg]
+# - title: Musique
+#   symbol: musique
+#   coordination_link: https://chat.nuitdebout.fr/channel/epinal-musique
+#   members: ["MP", "Joël", "Mathieu"]
+#   short_description: "Gestion et organisation de concerts et d'animations musicales"
+#   description: "Gestion et organisation de concerts et d'animations musicales"
+#   image:
+#     # teaser: comanimation1.jpg
+#     # features: [comlogistique1.jpg, comlogistique2.jpg]
 
 
 - title: Média
@@ -125,8 +118,8 @@
   short_description: "Communication interne et vers l'extérieur"
   description: "La commission média se charge des aspects de communication interne (outils de coordination...) et externe (wiki, captation photo et sonore, réseaux sociaux...)"
   image:
-    # teaser: comanimation1.jpg
-    # features: [comlogistique1.jpg, comlogistique2.jpg]
+    teaser: commedia.jpg
+    features: [commedia.jpg]
 
 - title: Projection
   symbol: projection
@@ -148,12 +141,12 @@
     # teaser: comanimation1.jpg
     # features: [comlogistique1.jpg, comlogistique2.jpg]
 
-- title: Théâtre
-  symbol: theatre
-  coordination_link: https://chat.nuitdebout.fr/channel/epinal-theatre
-  members: ["Adrien", "Emma", "Bérénice","Joël", "Léandre", "Antoine", "Brieuc"]
-  short_description: "Actions théâtrales"
-  description: ""
-  image:
-    # teaser: comanimation1.jpg
-    # features: [comlogistique1.jpg, comlogistique2.jpg]
+# - title: Théâtre
+#   symbol: theatre
+#   coordination_link: https://chat.nuitdebout.fr/channel/epinal-theatre
+#   members: ["Adrien", "Emma", "Bérénice","Joël", "Léandre", "Antoine", "Brieuc"]
+#   short_description: "Actions théâtrales"
+#   description: ""
+#   image:
+#     # teaser: comanimation1.jpg
+#     # features: [comlogistique1.jpg, comlogistique2.jpg]
