--- a/_data/revue-presse.yml
+++ b/_data/revue-presse.yml
@@ -5,6 +5,16 @@
   media: Vosges Matin
   date: 2016-05-22 15:35:44 +0200
 
+- title: "Vosges : les miliants de Nuit Debout chantent la Carmagnole devant le Medef"
+  url: http://www.vosgesmatin.fr/edition-d-epinal/2016/05/13/la-carmagnole-devant-le-medef
+  media: Vosges Matin
+  date: 2016-05-13 15:35:44 +0200
+
+- title: "Nuit Debout fait chanter le Medef"
+  url: http://www.actu88.fr/nuit-debout-fait-chanter-le-medef/
+  media: Actu88
+  date: 2016-05-13 15:35:44 +0200
+
 
 - title: "Nuit debout d'Epinal : cours camarade, le vieux monde est devant toi !"
   url: http://odeurdusapin.blogspot.fr/2016/04/nuit-debout-epinal.html
